--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/images/ferran.jpeg"
+avatar: "/images/AEBBE848-B44A-4450-A065-CA0A40CB6DD9.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
