--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social-network-links:
   github: claudiaalozanoo
 #  twitter: ferranad
 #  youtube: "@ferranad"
-  linkedin: Claudia Lozano
+  linkedin: claudialozanogargallo@gmail.com
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -72,6 +72,7 @@ share-links-active:
   twitter: false
   facebook: false
   linkedin: true
+  github: true
   vk: false
 
 # How to display the link to your website in the footer
@@ -110,17 +111,17 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+page-col: "#dfffdf"
+text-col: "#006400"
+link-col: "#006400"
+hover-col: "#CFFFE5"
+navbar-col: "#32CD32"
+navbar-text-col: "#006400"
+navbar-border-col: "#CFFFE5"
 footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-text-col: "#006400"
+footer-link-col: "#006400"
+footer-hover-col: "#CFFFE5"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
