--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social-network-links:
   github: claudiaalozanoo
 #  twitter: ferranad
 #  youtube: "@ferranad"
-  linkedin: claudialozanogargallo@gmail.com
+  linkedin: "in/claudialozanogargallo"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -77,7 +77,8 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "claudiaalozanoo.github.io"
+# url-pretty: "claudiaalozanoo.github.io"
+url: "https://claudiaalozanoo.github.io"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
