--- a/_config.yml
+++ b/_config.yml
@@ -112,14 +112,14 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#dfffdf"
+# page-col: "#dfffdf"
 text-col: "#006400"
 link-col: "#006400"
 hover-col: "#CFFFE5"
-# navbar-col: "#32CD32"
+navbar-col: "#32CD32"
 navbar-text-col: "#006400"
 navbar-border-col: "#CFFFE5"
-# footer-col: "#EAEAEA"
+footer-col: "#EAEAEA"
 footer-text-col: "#006400"
 footer-link-col: "#006400"
 footer-hover-col: "#CFFFE5"
@@ -127,9 +127,9 @@ footer-hover-col: "#CFFFE5"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/images/sakura.avif"
-footer-img: "/images/sakura.avif"
-#page-img: "/assets/img/bgimage.png"
+# navbar-img: "/images/sakura.avif"
+# footer-img: "/images/sakura.avif"
+page-img: "/images/sakura-bloom.jpg"
 
 
 ################
