--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social-network-links:
   github: claudiaalozanoo
 #  twitter: ferranad
 #  youtube: "@ferranad"
-  linkedin: "in/claudialozanogargallo"
+  linkedin: "clàudia-lozano-gargallo-88621b26b"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
