--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: daattali/beautiful-jekyll@6.0.1
-title: My personal website
+title: Home
 author: Clàudia Lozano
 
 ###############################################
@@ -127,8 +127,8 @@ footer-hover-col: "#b22222"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/images/navbar.png"
-footer-img: "/images/footbar.png"
+navbar-img: "/images/navbar_omics.png"
+footer-img: "/images/footbar_omics.png"
 # page-img: "/images/sakura-bloom.jpg"
 
 
