--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: Clàudia Lozano
 
 navbar-links:
   About Me: "aboutme"
-  Example Page: "example"
+#  Example Page: "example"
 
 ################
 # --- Logo --- #
